--- a/SimCommSysPropSheet.props
+++ b/SimCommSysPropSheet.props
@@ -13,6 +13,9 @@
   <ItemDefinitionGroup>
     <ClCompile>
       <AdditionalIncludeDirectories>$(BOOST_ROOT)\;</AdditionalIncludeDirectories>
+      <WarningLevel>Level3</WarningLevel>
+      <TreatWarningAsError>true</TreatWarningAsError>
+      <PreprocessorDefinitions>NO_WARN_MBCS_MFC_DEPRECATION;_VC80_UPGRADE=0x0600;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>$(BOOST_ROOT)\$(BOOSTLIB)\</AdditionalLibraryDirectories>
