--- a/SimCommSysPropSheet.props
+++ b/SimCommSysPropSheet.props
@@ -2,8 +2,8 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros">
-    <Branch>Value_is_set_automatically_by_macro</Branch>
-    <BOOSTLIB>Value_is_set_automatically_by_macro</BOOSTLIB>
+    <Branch>nf</Branch>
+    <BOOSTLIB>lib64-msvc-12.0</BOOSTLIB>
   </PropertyGroup>
   <PropertyGroup>
     <TargetName>$(ProjectName).$(Branch).$(Configuration)</TargetName>
