Changed handling of build version info
Instead of passing defines on the command line, now we create a header file
This is included only where the strings are used, for correct dependency
Also changed order of compilation of libraries to make sure file is created
Changed linking to use library groups to allow 'wrong' order

--- a/Libraries/Libbase/Makefile
+++ b/Libraries/Libbase/Makefile
@@ -39,7 +39,7 @@ LIBRARY := $(LIBRARY:Lib%=$(BUILDDIR)/lib%.a)
 default:
 	@echo No default target.
 
-build:	$(LIBRARY)
+build:	version.h $(LIBRARY)
 
 install:	build
 
@@ -49,6 +49,8 @@ clean:
 
 ## Setting targets
 
+FORCE:
+
 .PHONY:	default build install clean
 
 .SUFFIXES: # Delete the default suffixes
@@ -56,6 +58,11 @@ clean:
 .DELETE_ON_ERROR:
 
 # Manual targets
+
+version.h:	FORCE
+	@echo "Creating $@ [$(BUILDID): $(RELEASE)]"
+	@echo "#define SIMCOMMSYS_VERSION \"$(SIMCOMMSYS_VERSION)\"" > $@
+	@echo "#define SIMCOMMSYS_BUILD \"$(BUILDID)\"" >> $@
 
 $(LIBRARY):	$(OBJECTS)
 	@echo "Building library $* [$(BUILDID): $(RELEASE)]"
