--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
-.metadata
-RemoteSystemsTempFiles
-doc
-[Dd]ebug
-[Rr]elease
-[Pp]rofile
-Win32
-x64
-ipch
-*.suo
-*.ncb
-*.sdf
-*.opensdf
-*.bak
+/.metadata
+/RemoteSystemsTempFiles
+/doc
+/[Dd]ebug
+/[Rr]elease
+/[Pp]rofile
+/Win32
+/x64
+/ipch
+/*.suo
+/*.ncb
+/*.sdf
+/*.opensdf
+/*.bak
