--- a/SimCommsys/CSfullcycle/.gitignore
+++ b/SimCommsys/CSfullcycle/.gitignore
@@ -1,8 +1,8 @@
-[Dd]ebug
-[Rr]elease
-[Pp]rofile
-*.s
-*.ii
-Win32
-x64
-*.vcxproj.user
+/[Dd]ebug
+/[Rr]elease
+/[Pp]rofile
+/*.s
+/*.ii
+/Win32
+/x64
+/*.vcxproj.user
