--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,14 +1,16 @@
 {
-    "name": "SimCommSys",
+    "name": "Simcommsys",
     "dockerComposeFile": [
         "docker-compose.yml"
     ],
     "service": "dev",
-    "workspaceFolder": "/home/sc/simCommSys",
+    "workspaceFolder": "/home/sc/simcommsys",
     "remoteUser": "sc",
     "shutdownAction": "stopCompose",
     "extensions": [
         "albert.tabout",
+        "eamodio.gitlens",
+        "mhutchie.git-graph",
         "ms-vscode.cpptools"
     ]
 }
