--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -25,6 +25,24 @@
             }
         },
         {
+            "label": "Plain Install - Debug",
+            "type": "shell",
+            "problemMatcher": "$gcc",
+            "command": "time bear -o ${workspaceFolder}/.vscode/compile_commands.json make plain-install-main-debug -j8",
+            "group": "build",
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "dedicated",
+                "showReuseMessage": true,
+                "clear": false
+            }
+        },
+        {
             "label": "Clean",
             "type": "shell",
             "problemMatcher": [],
@@ -43,23 +61,6 @@
         },
         {
             "label": "Clean All",
-            "type": "shell",
-            "problemMatcher": [],
-            "command": "time make clean-all",
-            "options": {
-                "cwd": "${workspaceFolder}"
-            },
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": false,
-                "panel": "dedicated",
-                "showReuseMessage": true,
-                "clear": false
-            }
-        },
-        {
-            "label": "Clean Everything",
             "type": "shell",
             "problemMatcher": [],
             "command": "time make clean clean-all clean-dep clean-libs clean-main clean-test",
